# lightweight-crypto-lib

./: LICENCE.txt  Makefile.default  Makefile.in  README.md  autoclean.sh  autogen.sh  configure.ac
src/bitslice/LED/: LED.c  LED_utils.h
src/bitslice/PRESENT/: PRESENT.c  PRESENT_utils.h
src/bitslice/Piccolo/: Piccolo.c  Piccolo_util.h
src/common/: basic_helpers.h  bitslice_common.h  check_all.c  helpers.h  lib_common.c  log.h  test_vectors.h
src/table/LED/: LED.c  LED_tables.h
src/table/PRESENT/: PRESENT.c  PRESENT_tables.h
src/table/Piccolo/: Piccolo.c  Piccolo_tables.h
src/table/gen_tables/: LED_generateTables.c  PRESENT_generateTables.c  Piccolo_generateTables.c
src/vperm/LED/: LED.c
src/vperm/PRESENT/: PRESENT.c
src/vperm/Piccolo/: Piccolo.c
